--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <b>changed here code clean</b>
+    <b>developper here</b>
 </html>
